# serverless-patterns

./: .gitignore  Dockerfile  PUBLISHING.md  README.md  action.yml  apigw-to-access-s3-folders  example-pattern.json  kinesis-data-stream-lambda-esm-cdk-python.json  package.json  rest-api-private-alb-integration.json  update_release.sh
.github/: dependabot.yml
ALB-Cognito-Lambda-Pattern/: README.md  example-pattern.json
APIGateway-SQS-ReceiveMessages/: README.md  apigateway-sqs-receivemessages.json  example-pattern.json  send_message_to_queue.sh  template.yaml
Chatbot-with-Slack-Channel/: README.md  example-pattern.json  template.yml
FSx-OpenZFS-periodic-replication-using-EventBridge/: README.md  example-pattern.json  template.yaml
MSK-Lambda-Ec2Client-VPC-CFtemplate/: README.md  example-pattern.json  template.yaml
PublicNLB-privateAPI-CFN/: CrossAccountForNLBALB.yaml  NLBALBCheck.yaml  a.txt
_pattern-model/: README.md  example-pattern.json  template.yaml
account-tagging-at-scale/: README.md
ack-connect-route/: README.md  ack-connect-route.json  example-pattern.json  template.yml
activemq-lambda/: README.md  example-pattern.json  template.yaml
activemq-lambda-sam-java/: README.md  activemq-lambda-sam-java.json  example-pattern.json  pom.xml  template.yaml
activemq-private-lambda-java-sam/: ActiveMQAndClientEC2.yaml  ActiveMQAndClientEC2Backup.yaml  README.md  VPCOnly.yaml  activemq-private-lambda-java-sam.json  activemq_queue_browser.sh  create-activemq.sh  example-pattern.json  test-mq.yaml
activemq-private-lambda-python-sam/: .gitignore  ActiveMQAndClientEC2.yaml  README.md  activemq_queue_browser.sh  example-pattern.json
adobe-eventbridge-lambda/: README.md  app.py  event.json  example-pattern.json
agentcore-browser-cdk/: README.md  cdk.json  example-pattern.json  package.json  tsconfig.json
agentcore-gateway-lambda-cdk/: README.md  example-pattern.json  package.json
agentcore-identity-cognito-multi-tenant-cdk/: .gitignore  README.md  app.py  cdk.json  example-pattern.json
agentcore-memory-cdk/: README.md  example-pattern.json  package.json
agentcore-opensearch-serverless-nextgen-cdk/: README.md  cdk.json  example-pattern.json  package.json  tsconfig.json
agentcore-web-search-cdk/: .gitignore  README.md  example-pattern.json  package.json  tsconfig.json
alb-cognito-lambda/: README.md  example-pattern.json  template.yaml
alb-ecs-bedrock-agents-cdk-dotnet/: README.md  alb-ecs-bedrock-agents-cdk-dotnet-arch-drawio  alb-ecs-bedrock-agents-cdk-dotnet.json  cdk.json  example-pattern.json
alb-ecs-java-sam/: README.md  alb-ecs-java-sam.json  build.sh  create-books-aws.sh  create-books-local.sh  delete-book-local.sh  delete-ecr-repo.sh  dockerfile  example-pattern.json  pom.xml  retrieve-all-books-aws.sh  retrieve-all-books-local.sh  template.yaml
alb-lambda-cdk/: README.md  cdk.json  example-pattern.json  package.json
alb-lambda-pulumi-cs/: .gitignore  Program.cs  Pulumi.yaml  README.md  alb-lambda-pulumi-yaml.csproj  example-pattern.json
alb-lambda-pulumi-go/: Pulumi.yaml  README.md  example-pattern.json  go.mod  go.sum  main.go
alb-lambda-pulumi-js/: .gitignore  Pulumi.yaml  README.md  example-pattern.json  index.js  package.json
alb-lambda-pulumi-ts/: Pulumi.dev.yaml  Pulumi.yaml  README.nd  example-pattern.json  index.ts  package.json
alb-lambda-pulumi-yaml/: .gitignore  Pulumi.yaml  README.md  example-pattern.json
alb-lambda-rest-api-sam-py/: .gitignore  Pipfile  README.md  alb-lambda-rest-api-sam-py.json  example-pattern.json  requirements.txt  template.yaml
alb-lambda-rust/: Cargo.toml  README.md  example-pattern.json  template.yml
alb-lambda-serverless/: README.md  example-pattern.json  package.json  serverless.yml
alb-lambda-terraform/: .gitignore  .npmignore  README.md  example-pattern.json  main.tf  variables.tf
alb-path-based-route-lambda-cdk/: README.md  cdk.json  example-pattern.json
alb-path-based-route-lambda-tf/: README.md  example-pattern.json  main.tf  outputs.tf  providers.tf  variables.tf
alb-path-based-session-stickiness/: README.md  app.py  cdk.json  example-pattern.json  requirements.txt
amazonmq-rabbitmq-msg-replication/: README.md  (+5 more)
apigw-ddb-rust/get-by-id/: Cargo.toml
apigw-ddb-rust/get-by-id/src/data/: mod.rs  models.rs  repositories.rs
apigw-websocket-api-bedrock-streaming-rust-cdk/cdk/lib/bedrock-streamer-lambda/: Cargo.toml
apigw-websocket-api-bedrock-streaming-rust-cdk/cdk/lib/bedrock-streamer-lambda/src/: main.rs
appconfig-lambda-rust/: Cargo.toml  README.md  example-pattern.json  template.yml
cloudfront-apigw-http-api-lambda-rust/: Cargo.toml  README.md  example-pattern.json  template.yml
cloudfront-failover-apigw-http-api-lambda-rust/: Cargo.toml  Makefile  README.md  api.yml  cloudfront.yml  example-pattern.json
dynamodb-streams-lambda-eventbridge-sam-rust/: Cargo.toml  Makefile  README.md  events.json  example-pattern.json  template.yml
lambda-bedrock-response-streaming-rust-cdk/cdk/lib/bedrock-streamer-lambda/: Cargo.toml
lambda-bedrock-response-streaming-rust-cdk/cdk/lib/bedrock-streamer-lambda/src/: main.rs
lambda-dynamodb-rust/: Cargo.toml  README.md  example-pattern.json  template.yml
lambda-eventbridge-rust/: Cargo.toml  README.md  example-pattern.json  template.yml
lambda-microvm-dta-terraform/src/orchestrator/: pyproject.toml
lambda-microvm-dta-terraform/src/orchestrator/src/microvm_dta/: aws_cli.py
lambda-rekognition-rust/: Cargo.toml  README.md  example-pattern.json  template.yml
lambda-sqs-rust-sam/: Cargo.toml  README.md  example-pattern.json  template.yml
s3-eventbridge-direct-rust/: Cargo.toml  README.md  example-pattern.json  template.yml
s3-eventbridge-rust-sam/: Cargo.toml  README.md  example-pattern.json  template.yml
sns-sqs-lambda-rust/: Cargo.toml  README.md  example-pattern.json
sqs-lambda-partial-batch-rust-sam/: Cargo.toml  README.md  template.yml
sqs-lambda-rust/: Cargo.toml  Makefile  README.md  example-pattern.json  template.yaml
sqs-lambda-rust-sam/: Cargo.toml  README.md  example-pattern.json  template.yml
(+9959 files in other folders)
