[package]
name = "lambda-appconfig-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "handler"
path = "src/bin/handler.rs"

[dependencies]
aws-config = "0.14.0"
aws-types = "0.14.0"
lambda_runtime = "0.5.1"
lazy_static = "1.4.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
