[package]
name = "lambda-appconfig-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "handler"
path = "src/bin/handler.rs"

[dependencies]
aws-config = {version = "1", features = ["behavior-version-latest"] }
lambda_runtime = "0.13"
lazy_static = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
