[package]
name = "cloudfront-failover-apigw-http-api-lambda-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "handler"
path = "src/bin/handler.rs"

[dependencies]
lambda_http = "0.5.0"
lambda_runtime = "0.5.0"
serde_json = "1.0.68"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"