[package]
name = "sns-sqs-lambda-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "handler"
path = "src/bin/handler.rs"

[dependencies]
aws_lambda_events = "0.6.1"
futures = "0.3.17"
lambda_runtime = "0.5.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
simple-error = "0.2"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"