[package]
name = "batch-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "handler"
path = "src/bin/handler.rs"

[dependencies]
aws_lambda_events = { version = "0.7", default-features = false, features = ["sqs"] }
futures = "0.3"
lambda_runtime = "0.7.2"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }