[package]
name = "sqs-lambda-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "handler"
path = "src/bin/handler.rs"

[dependencies]
aws_lambda_events = "0.5.0"
lambda_runtime = "0.4.1"
tokio = { version = "1", features = ["full"] }
