[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "microvm-dta-orchestrator"
version = "0.1.0"
description = "CI orchestrator for aws-lambda-microvm-dta-sample"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
microvm-dta = "microvm_dta.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
